[package]
name = "textractor_websocket"
version = "0.1.0"
authors = ["sadolit <sadolit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web_socket"
crate-type = ["cdylib"]

[dependencies]
ws = "0.9.2"
once_cell = "1.21.3"
crossbeam-channel = "0.5"
winapi = "0.3.9"
widestring = "1.2.0"
windows-sys = { version = "0.59.0", default-features = false, features = [
  "Win32_System_SystemServices",
] }
